# vibe-replay

./: .gitignore  LICENSE  PRODUCT_BRIEF.md  README.md  pyproject.toml
tests/: test_analyzer.py  test_capture.py  test_renderer.py  test_store.py
vibe_replay/: __init__.py  analyzer.py  capture.py  cli.py  hooks.py  mcp_server.py  models.py  renderer.py  store.py
vibe_replay/templates/: replay.html  summary.md.jinja
