[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-replay"
version = "0.1.0"
description = "Capture, reflect, and share your AI coding sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Zhiyuan Wang" },
]
keywords = [
    "ai",
    "coding",
    "claude",
    "replay",
    "session",
    "reflection",
    "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
vibe-replay = "vibe_replay.cli:main"

[project.urls]
Homepage = "https://github.com/zzhiyuann/vibe-replay"
Repository = "https://github.com/zzhiyuann/vibe-replay"
Issues = "https://github.com/zzhiyuann/vibe-replay/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
